Removed redundant maven dependency Adjust placeholder thumbnail to center it Removed thumbnail title to avoid overlap with image Fixed loader gif interaction

--- a/webapp/src/main/webapp/assets/stylesheets/bs-study-detail-1.0.150301.css
+++ b/webapp/src/main/webapp/assets/stylesheets/bs-study-detail-1.0.150301.css
@@ -207,6 +207,10 @@ a.file-link {
     display: inline-block;
 }
 
+.thumbnail-loader {
+    display: none;
+}
+
 .thumbnail-image {
     display: none;
     padding:2px;
